syntax = "proto3";

package api.v1.capsule;

import "google/protobuf/timestamp.proto";
import "model/author.proto";
import "model/revision.proto";
import "model/git.proto";
import "api/v1/capsule/rollout/status.proto";
import "api/v1/capsule/job.proto";
import "api/v1/capsule/change.proto";
import "platform/v1/generated.proto";
import "api/v1/project/revision.proto";
import "api/v1/environment/revision.proto";
import "api/v1/capsule/revision.proto";

// The rollout model.
message Rollout {
  // Unique indentifier for the rollout.
  uint64 rollout_id = 1;
  // The rollout config.
  RolloutConfig config = 2;
  // The rollout status.
  api.v1.capsule.rollout.Status status = 4;
  platform.v1.CapsuleSpec spec = 5;
  api.v1.capsule.Revisions revisions = 6;
}

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_ABORT = 1;
}

message RolloutConfig {
  // The user who initiated the rollout.
  model.Author created_by = 1;
  google.protobuf.Timestamp created_at = 2;
  repeated Change changes = 3;
  uint32 replicas = 4;
  string image_id = 5;
  Network network = 6;
  ContainerSettings container_settings = 7;
  bool auto_add_rig_service_accounts = 8;
  repeated ConfigFile config_files = 9;
  HorizontalScale horizontal_scale = 10;
  repeated CronJob cron_jobs = 11;
  string environment_id = 12;
  string message = 13;
  map<string, string> annotations = 14;
}

message ConfigFile {
  string path = 1;
  bytes content = 2;
  model.Author updated_by = 3;
  google.protobuf.Timestamp updated_at = 4;
  bool is_secret = 5;
}

message Revisions {
  repeated model.RevisionMetadata projects = 1;
  repeated model.RevisionMetadata environments = 2;
  repeated model.RevisionMetadata capsule_sets = 3;
  repeated model.RevisionMetadata capsules = 4;
}

message RolloutProposal {
  string project_id = 1;
  string environment_id = 2;
  string capsule_id = 3;
  string branch_name = 4;
  platform.v1.CapsuleSpec spec = 5;
  repeated Change changes = 6;
  google.protobuf.Timestamp created_at = 7;
  model.Author created_by = 8;
  string proposal_id = 9;
  model.RepoBranch repo_branch = 10;
  string review_url = 11;
}
