syntax = "proto3";

package api.v1.image;

import "google/protobuf/timestamp.proto";
import "api/v1/capsule/image.proto";
import "model/common.proto";

service Service {
  // Get Information about an image in a image.
  rpc GetImageInfo(GetImageInfoRequest) returns (GetImageInfoResponse) {}
  // Get Information about a docker registry repository.
  rpc GetRepositoryInfo(GetRepositoryInfoRequest)
      returns (GetRepositoryInfoResponse) {}
  // Get a image.
  rpc Get(GetRequest) returns (GetResponse) {}
  // Create a new image.
  // Images are immutable and cannot change. Create a new image to make
  // changes from an existing one.
  rpc Create(CreateRequest) returns (CreateResponse) {}
  // List images for a capsule.
  rpc List(ListRequest) returns (ListResponse) {}
  // Delete a image.
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

// Request to get information about an image.
message GetImageInfoRequest {
  // The image to get information about.
  string image = 1;
}

// Reponse to GetImageInfo request, containing information about an image.
message GetImageInfoResponse {
  // Image ID.
  ImageId image_id = 1;
  // Image from the request.
  string image_string = 2;
  // When the image was created.
  google.protobuf.Timestamp created_at = 3;
  // Origin of the image.
  api.v1.capsule.Origin origin = 4;
}

// A collection of image properties that uniquely identifies an image.
message ImageId {
  // Docker Registry.
  string registry = 1;
  // Docker Repository.
  string repository = 2;
  // Tag of the image.
  string tag = 3;
  // Digest of the image.
  string digest = 4;
}

// Get repository information request.
message GetRepositoryInfoRequest {
  // Docker Registry
  string registry = 1;
  // Docker Repository
  string repository = 2;
}

// Get repository information response.
message GetRepositoryInfoResponse {
  // Image Tags in the repository.
  repeated Tag tags = 1;
}

// A docker image tag.
message Tag {
  // Tag of the image.
  string tag = 1;
  // When the image was created.
  google.protobuf.Timestamp image_created_at = 2;
}

// Request to create a new image in a capsule.
message CreateRequest {
  // Capsule to create the image in.
  string capsule_id = 1;
  // Container image to create the image from.
  string image = 2;
  // Digest of the image.
  string digest = 3;
  // Origin of the image
  api.v1.capsule.Origin origin = 4;
  // Meta data to attach to the image.
  map<string, string> labels = 5;
  // if true skip check if image exists.
  bool skip_image_check = 6;
  // Project ID.
  string project_id = 7;
}

// Response to create a new image in a capsule.
message CreateResponse {
  // ID of the image.
  string image_id = 1;
  // True if a new image was created.
  bool created_new_image = 2;
}

// Request to list images.
message ListRequest {
  // Capsule to list images in.
  string capsule_id = 1;
  // Pagination options.
  model.Pagination pagination = 2;
  // Project ID.
  string project_id = 3;
}

// Reponse to list images.
message ListResponse {
  // Images in the capsule.
  repeated api.v1.capsule.Image images = 1;
  // Total number of images in the capsule.
  uint64 total = 2;
}

// Request to delete a image.
message DeleteRequest {
  // Capsule to delete the image from.
  string capsule_id = 1;
  // Image to delete.
  string image_id = 2;
  // Project ID.
  string project_id = 3;
}

// Empty response to delete a image.
message DeleteResponse {}

// Request to get a image.
message GetRequest {
  // Capsule to get the image from.
  string capsule_id = 1;
  // Image to get.
  string image_id = 2;
  // Project ID.
  string project_id = 3;
}

// Response to get a image.
message GetResponse {
  // The image to retrieve
  api.v1.capsule.Image image = 1;
}
